5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1635_2446.log
== TEST (2019-04-12 13:33:48) 
-- CODE:
s = int(input("senha:"))
a1 = s// 1000000
print(a1)
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:34:07) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000
print(a1)
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:43:45) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "senha valida"
else:
	msg = "senha invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:44:28) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "senha valida"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:44:44) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "senha valida"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.214776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:45:25) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:45:30) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.127581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:45:50) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6) % (a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6) % (a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:46:44) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.12895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:46:45) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.106517
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:46:45) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:46:45) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.112079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:46:46) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:49:48) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:51:00) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:51:08) 
-- CODE:
s = int(input("senha:"))
a1 = s// 100000 # primeiro num
r1 = s % 100000
a2 = r1 // 10000 # segundo
r2 = a2 % 10000
a3 = r2 // 1000 # terceiro 
r3 = a3 % 1000
a4 = r3 // 100 # quarto
r4 = a4 % 100
a5 = r4 // 10 # quinto
a6 = a5 % 10 #sexto
y = (a2 + a4 + a6)%(a1 + a3 + a5)

if (y == 0):
	msg = "senha invalida"
else:
	msg = "acesso liberado"
print(msg)

-- EXECUTION TIME:
0.199329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2446/main.py", line 12, in <module>
    y = (a2 + a4 + a6)%(a1 + a3 + a5)
ZeroDivisionError: integer division or modulo by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:59:10) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (a1%100000) // 10000
a3 = (a2 % 10000) // 1000
a4 = (3 % 1000) // 100
a5 = (a4% 100) // 10
a6 = a5 % 10
 x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x ==0) :
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
File "XXXX", line 8
    x = (a2 + a4 + a6) % (a1 + a3 + a5)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:01:44) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
 x = (a2 + a4 + a6) % (a1 + a3 + a5)

if (x ==0) :
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- ERROR:
File "XXXX", line 8
    x = (a2 + a4 + a6) % (a1 + a3 + a5)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:03:08) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:03:23) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg = "acesso liberado"
else:
	msg = "senha invalida"
print(msg)

-- EXECUTION TIME:
0.138623
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:03:54) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso lberado"
print(msg)

-- OUTPUT:
acesso lberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:03:54) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso lberado"
print(msg)

-- OUTPUT:
acesso lberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:04:00) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso lberado"
print(msg)

-- EXECUTION TIME:
0.147136
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso lberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso lberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:04:16) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso lberado"
print(msg)

-- OUTPUT:
acesso lberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:04:57) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "acesso liberado"
else:
	msg ="senha ivalida"
print(msg)

-- EXECUTION TIME:
0.171226
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:04:58) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "acesso liberado"
else:
	msg ="senha ivalida"
print(msg)

-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:04:58) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "acesso liberado"
else:
	msg ="senha ivalida"
print(msg)

-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:04:58) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "acesso liberado"
else:
	msg ="senha ivalida"
print(msg)

-- EXECUTION TIME:
0.187334
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha:acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha:senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:04:58) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "acesso liberado"
else:
	msg ="senha ivalida"
print(msg)

-- EXECUTION TIME:
0.204269
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha:acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha:senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha:senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:08:30) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso liberado"
print(msg)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:08:31) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso liberado"
print(msg)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:08:39) 
-- CODE:
s = int(input("senha:"))
a1 = s // 100000
a2 = (s%100000)// 10000
a3 = (s% 10000) // 1000
a4 = (s % 1000) // 100
a5 = (s % 100) // 10
a6 = s% 10
x = (a2 + a4 + a6) % (a1 + a3 + a5)

if(x!= 0 ):
	msg =  "senha invalida"
else:
	msg ="acesso liberado"
print(msg)

-- EXECUTION TIME:
0.175566
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
